Feature | Rework business logic, add resillence4j, zipkin